# ML_Spring_26_Project

./: .gitignore  README.md  compare_models.ipynb  extract_frames.py  main.py  monitor_training.ipynb  prepare_dataset.py  pyproject.toml  start_label_studio.sh  sweep.py  train.py  train_moondream.py  yolo.py
moondream_env/: README.md  pyproject.toml
report/: neurips_2024.tex
report/figures/: make_compute_efficiency.py  make_sweep_progression.py
sam3/: annotate.py  backup.py  detect_person.py  review.py  setup.sh
sweeps/v1/: results.csv  results.jsonl
sweeps/v1/trials/1776318941178_w0_0000/: trial_config.json
sweeps/v1/trials/1776318941202_w1_0000/: trial_config.json
sweeps/v1/trials/1776319439867_w0_0000/: trial_config.json
sweeps/v1/trials/1776319441533_w1_0000/: trial_config.json
sweeps/v1/trials/1776320045838_w0_0000/: trial_config.json  trial_result.json
sweeps/v1/trials/1776320047483_w1_0000/: trial_config.json  trial_result.json
sweeps/v1/trials/1776320124499_w1_0001/: trial_config.json  trial_result.json
sweeps/v1/trials/1776320184880_w0_0001/: trial_config.json  trial_result.json
sweeps/v1/trials/1776320186751_w1_0002/: trial_config.json  trial_result.json
sweeps/v1/trials/1776320270118_w1_0003/: trial_config.json  trial_result.json
sweeps/v10/: results.csv  results.jsonl
sweeps/v2/: results.csv  results.jsonl
sweeps/v3/: results.csv  results.jsonl
sweeps/v4/: results.csv  results.jsonl
sweeps/v5/: results.csv  results.jsonl
sweeps/v8/: results.csv  results.jsonl
sweeps/v9/: results.csv  results.jsonl
(+325 files in other folders)
